atualização do projeto k8s cp2 prod kubernetes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -168,7 +168,7 @@
 </head>
 <body>
         <header>
-            <img src="https://kubernetes.io/images/kubernetes-horizontal-color.png" alt="Kubernetes Logo" class="logo">
+            <img src="https://kubernetes.io/_common-resources/images/flower.svg" alt="Kubernetes Logo" class="logo">
             <h1>TechFleet - Ambiente de Produção Kubernetes</h1>
             <p>Migração para Containers Orquestrados | Portal de Aplicação</p>
         </header>    <main>
